src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.mainBgImage {
  background-image: url("../assets/images/bg.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.sideGradient1 {
  width: 128px;
  height: 130px;
  background: #da230d;
  opacity: 0.3;
  filter: blur(50px);
}

.sideGradient2 {
  width: 155px;
  height: 157px;
  background: #e4be2b;
  opacity: 0.3;
  filter: blur(50px);
}

.sideGradient3 {
  width: 301.41px;
  height: 330.59px;
  background: #3a2f62;
  filter: blur(166.5px);
  transform: matrix(-0.99, 0.12, -0.09, -1, 0, 0);
}

.sideGradient4 {
  width: 211.54px;
  height: 376.46px;
  background: #291c51;
  filter: blur(100px);
  transform: matrix(1, 0, -0.03, 1, 0, 0);
}

.HeroText {
  background: linear-gradient(
    90.69deg,
    #fcbb0a 0%,
    rgba(183, 122, 255, 0.25) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-shadow: 0px 4px 20px rgba(61, 38, 102, 0.5);
}
.HeroTextStroke {
  position: absolute;
  top: 18%;
  left: 3%;
  -webkit-text-stroke: 1px rgba(183, 122, 255, 0.25);

  color: transparent;
}

.slideCount {
  position: absolute;
  top: -25%;
  left: -40%;
  -webkit-text-stroke: 1px rgba(183, 122, 255, 0.25);
  color: transparent;
}

.NextButton {
  width: 54px;
  height: 54px;
  background: rgba(255, 255, 255, 0.05);
  border: 2px solid rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(3px);
  border-radius: 100%;
}

.NextButton:hover {
  background: linear-gradient(
    130.81deg,
    rgba(161, 95, 238, 0.4) 19.08%,
    rgba(161, 95, 238, 0.116) 68.08%
  );
  border: 2px solid #a15fee;
}

.CoinCard {
  box-sizing: border-box;
  background: rgba(155, 164, 240, 0.15);
  box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.05);
  backdrop-filter: blur(8.5px);
  border: 2px solid rgba(255, 255, 255, 0.2);
  border-radius: 26px;
  transform-origin: left;
  transition: transform 0.3s ease;
  cursor: pointer;
}
.CoinCard:hover {
  transform: rotate(-7deg);
}
.CoinCard:hover h4 {
  background: linear-gradient(
    90.69deg,
    #fcbb0a 0%,
    rgba(183, 122, 255, 0.25) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.CoinCardParents::-webkit-scrollbar {
  display: none;
}

#tokensRate::-webkit-scrollbar {
  display: none;
}

#tokensRate th,
td {
  padding: 27px 17px 27px 0;
  text-align: left;
}
#tokensRate tr th:last-child,
td:last-child {
  text-align: center;
}

#tokensRate tr th:last-child,
td:last-child {
  padding: 0px;
}

#tokensRate thead th {
  font-weight: 500;
  font-size: 12px;
  line-height: 12px;
  letter-spacing: -0.02em;
  color: #e2ebfb;
  opacity: 0.4;
}

#tokensRate tr td:first-child {
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 80%;
  letter-spacing: -0.04em;
  color: #e2ebfb;
}
#tokensRate tr td {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 80%;
  letter-spacing: -0.04em;
  color: #9690ad;
}

.votingBgImage {
  background-image: url("../assets/images/votingsBG.png");
  background-repeat: no-repeat;
  background-size: cover;
}

/*  */

#votingsChart::-webkit-scrollbar {
  display: none;
}

#votingsChart th,
td {
  padding: 27px 17px 27px 0;
  text-align: left;
}

#votingsChart tr th:last-child,
td:last-child {
  padding: 0px;
}

#votingsChart thead th {
  font-weight: 500;
  font-size: 12px;
  line-height: 12px;
  letter-spacing: -0.02em;
  color: #e2ebfb;
  opacity: 0.4;
}

#votingsChart tr td:first-child {
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 80%;
  letter-spacing: -0.04em;
  color: #e2ebfb;
}
#votingsChart tr td:last-child {
  font-weight: 400;
  font-size: 16px;
  line-height: 80%;
  letter-spacing: -0.04em;
  color: #a15fee;
  text-align: left;
}
#votingsChart tr td {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 80%;
  letter-spacing: -0.04em;
  color: #9690ad;
}

/* gradientEllipse */
.gradientEllipse857 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 25px;
  top: 100px;
  background: rgba(207, 77, 215, 0.2);
  filter: blur(200px);
}
.gradientEllipse866 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 197px;
  top: 1022px;
  background: rgba(207, 77, 215, 0.2);
  filter: blur(200px);
}
.gradientEllipse854 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 900.87px;
  top: 359px;
  background: rgba(207, 77, 215, 0.2);
  filter: blur(200px);
}
.gradientEllipse862 {
  position: absolute;
  width: 340px;
  height: 343px;
  left: 93px;
  top: 0px;
  background: #f01312;
  opacity: 0.2;
  filter: blur(100px);
}
.gradientEllipse875 {
  position: absolute;
  width: 383px;
  height: 327px;
  left: 454px;
  top: 2689px;
  background: #ffba07;
  opacity: 0.3;
  filter: blur(175px);
}
.gradientEllipse879 {
  position: absolute;
  width: 410px;
  height: 415px;
  left: 1008px;
  top: 2991px;
  background: #9e7cff;
  opacity: 0.4;
  filter: blur(150px);
}
.gradientEllipse878 {
  position: absolute;
  width: 410px;
  height: 415px;
  left: 959px;
  top: 2335px;
  background: #9e7cff;
  opacity: 0.4;
  filter: blur(150px);
}
.gradientEllipse870 {
  position: absolute;
  width: 410px;
  height: 415px;
  left: 567px;
  top: 1901px;
  background: #ffba07;
  opacity: 0.2;
  filter: blur(150px);
}
.gradientEllipse865 {
  position: absolute;
  width: 410px;
  height: 415px;
  left: 965px;
  top: 1164px;
  background: #ffba07;
  opacity: 0.2;
  filter: blur(150px);
}
.gradientEllipse864 {
  position: absolute;
  width: 410px;
  height: 415px;
  left: 250px;
  top: 699px;
  background: #ffba07;
  opacity: 0.2;
  filter: blur(100px);
}
.gradientEllipse863 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 1028px;
  top: -16px;
  background: #ffba07;
  opacity: 0.2;
  filter: blur(100px);
}
.gradientEllipse859 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 361px;
  top: 243px;
  background: #edca1c;
  opacity: 0.1;
  filter: blur(200px);
}
.gradientEllipse860 {
  position: absolute;
  width: 350px;
  height: 353px;
  left: 541px;
  top: 320px;
  background: #e62107;
  opacity: 0.3;
  filter: blur(150px);
}
.gradientEllipse861 {
  position: absolute;
  width: 350px;
  height: 353px;
  left: 358px;
  top: 250px;
  background: #ffe001;
  opacity: 0.3;
  filter: blur(100px);
}
.gradientEllipse858 {
  position: absolute;
  width: 276px;
  height: 278px;
  left: 0px;
  top: 0px;
  background: #ffe001;
  opacity: 0.3;
  filter: blur(100px);
}
.gradientEllipse876 {
  position: absolute;
  width: 436px;
  height: 413px;
  left: 61px;
  top: 1870px;
  background: rgba(142, 102, 255, 0.5);
  filter: blur(200px);
}
.gradientEllipse868 {
  position: absolute;
  width: 436px;
  height: 413px;
  left: 906px;
  top: 1602px;
  background: rgba(142, 102, 255, 0.5);
  filter: blur(200px);
}
.gradientEllipse874 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 158px;
  top: 2979px;
  background: rgba(142, 102, 255, 0.3);
  filter: blur(200px);
}
.gradientEllipse873 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 473px;
  top: 2180px;
  background: rgba(142, 102, 255, 0.3);
  filter: blur(200px);
}
.gradientEllipse869 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 488px;
  top: 1762px;
  background: rgba(142, 102, 255, 0.3);
  filter: blur(200px);
}
.gradientEllipse867 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 16px;
  top: 1173px;
  background: rgba(142, 102, 255, 0.3);
  filter: blur(200px);
}
.gradientEllipse852 {
  position: absolute;
  width: 562.46px;
  height: 568px;
  left: 908px;
  top: 721px;
  background: rgba(142, 102, 255, 0.3);
  filter: blur(200px);
}

